src/objects/Download_Instance__c.object
<CustomObject>
    <fields>
        <fullName>Account_Compass_Id__c</fullName>
        <formula>Contact_Name__r.Account.Compass_ID__c</formula>
        <label>Account Compass Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Contact_Name__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activation_Code__c</fullName>
        <label>Activation Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activation_datetime__c</fullName>
        <label>Activation date/time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Download Instances</relationshipLabel>
        <relationshipName>Download_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Scopus_Id__c</fullName>
        <formula>VALUE(Contact_Name__r.Scopus_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Scopus Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSI</label>
        <referenceTo>DSI__c</referenceTo>
        <relationshipLabel>Download Instances</relationshipLabel>
        <relationshipName>Download_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DownloadDurationPeriod__c</fullName>
        <label>Download Duration Period</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DownloadStatsID__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <label>Download Stats ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Download_Profile__c</fullName>
        <formula>Downloaded_User__r.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Download Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Download__c</fullName>
        <label>Download</label>
        <referenceTo>Downloads__c</referenceTo>
        <relationshipLabel>Download Instances</relationshipLabel>
        <relationshipName>Download_Instances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Downloaded_Date__c</fullName>
        <label>Download Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Downloaded_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who downloaded</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Download_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manual_Key_Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Key Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Download__r.Section_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_downloaded__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product downloaded</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Download Instances</relationshipLabel>
        <relationshipName>Download_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Who_Activated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who Activated</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Download_Instances1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Download Instance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DSI__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Product_downloaded__c</columns>
        <columns>Product__c</columns>
        <columns>Downloaded_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DI-{00000000}</displayFormat>
        <label>Downloads Instance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Download Instances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>